--- a/listener/pom.xml
+++ b/listener/pom.xml
@@ -9,6 +9,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
+
     <artifactId>listener</artifactId>
 
     <dependencies>
